--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@uidotdev/usehooks": "^2.4.1",
     "framer-motion": "^12.23.12",
     "lodash": "^4.17.21",
     "motion": "^12.23.11",
