--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.15",
     "@uidotdev/usehooks": "^2.4.1",
     "framer-motion": "^12.23.12",
     "lodash": "^4.17.21",
@@ -17,10 +18,12 @@
     "primereact": "^10.9.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "react-scroll": "^1.9.3",
-    "react-scroll-to-top": "^3.1.0"
+    "react-scroll-to-top": "^3.1.0",
+    "tailwindcss": "^4.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
